# stem

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  readme.md  travis.yml
.github/workflows/: osx.yml
cmake/: catch.cmake  glad.cmake  glfw.cmake  glm.cmake
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
include/stem/: Buffer.hpp  Buffer.inl  Error.hpp  Exception.hpp  Geometry.hpp  Program.hpp  core.hpp  math.cpp
include/stem/core/: Buffer.inl  Program.hpp  Shader.hpp  Shader.inl
include/stem/math/: Vector.hpp  Vector2.hpp
libs/glad/include/glad/: gl.h  glad.h
libs/glad/src/: glad.c
scripts/: libs.sh
src/: Error.cpp  Exception.cpp  Geometry.cpp  Program.cpp  main.cpp
src/core/: Program.cpp  Shader.cpp
tests/: CMakeLists.txt  Program.cpp  main.cpp
tests/core/: Program.cpp  Shader.cpp
